# spec2code/java-spring/src/main/java/de/codecentric/javaspring/web/AuthorsController.java
@@ -3,12 +3,14 @@ package de.codecentric.javaspring.web;
 import de.codecentric.javaspring.api.AuthorsApi;
 import de.codecentric.javaspring.api.model.AuthorDTO;
 import de.codecentric.javaspring.api.model.CreateAuthorDTO;
-import de.codecentric.javaspring.persistence.AuthorEntity;
+import de.codecentric.javaspring.persistence.Author;
 import de.codecentric.javaspring.persistence.AuthorService;
+import de.codecentric.javaspring.persistence.PaginatedResult;
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
 import lombok.AllArgsConstructor;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -21,8 +23,7 @@ public class AuthorsController implements AuthorsApi {
 
     @Override
     public ResponseEntity<AuthorDTO> createAuthor(CreateAuthorDTO createAuthor) {
-        final AuthorEntity entity =
-                service.save(new AuthorEntity(createAuthor.getFirstName(), createAuthor.getLastName()));
+        final Author entity = service.save(new Author(createAuthor.getFirstName(), createAuthor.getLastName()));
         return ResponseEntity.created(URI.create("/" + entity.id()))
                 .body(new AuthorDTO().id(entity.id()).firstName(entity.firstName()).lastName(entity.lastName()));
     }
@@ -35,23 +36,29 @@ public class AuthorsController implements AuthorsApi {
 
     @Override
     public ResponseEntity<AuthorDTO> getAuthorById(UUID authorId) {
-        final AuthorEntity entity = service.get(authorId);
+        final Author entity = service.get(authorId);
         return ResponseEntity
                 .ok(new AuthorDTO().id(entity.id()).firstName(entity.firstName()).lastName(entity.lastName()));
     }
 
     @Override
-    public ResponseEntity<List<AuthorDTO>> listAuthors(String search) {
-        final List<AuthorDTO> authors = service.list(search).stream().map(
+    public ResponseEntity<List<AuthorDTO>> listAuthors(Integer page, Integer perPage, String search) {
+        final PaginatedResult<Author> listOfAuthors = service.list(search, page, perPage);
+        final List<AuthorDTO> authors = listOfAuthors.results().stream().map(
                 entity -> new AuthorDTO().id(entity.id()).firstName(entity.firstName()).lastName(entity.lastName()))
                 .toList();
-        return ResponseEntity.ok(authors);
+        final HttpHeaders responseHeaders = new HttpHeaders();
+        responseHeaders.add("X-Total-Count", String.valueOf(listOfAuthors.totalCount()));
+        responseHeaders.add("X-Total-Pages", String.valueOf(listOfAuthors.totalPages()));
+        responseHeaders.add("X-Per-Page", String.valueOf(perPage));
+        responseHeaders.add("X-Current-Page", String.valueOf(page));
+        return ResponseEntity.ok().headers(responseHeaders).body(authors);
     }
 
     @Override
     public ResponseEntity<Void> updateAuthor(UUID authorId, CreateAuthorDTO createAuthor) {
         service.get(authorId); // check if author exists
-        service.save(new AuthorEntity(authorId, createAuthor.getFirstName(), createAuthor.getLastName()));
+        service.save(new Author(authorId, createAuthor.getFirstName(), createAuthor.getLastName()));
         return ResponseEntity.noContent().build();
     }
 }
